[package]
name = "re2dfa"
version = "1.0.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
smallvec = { version = "*", features = ["union"] }
nom = "*"
bitset = { git = "https://github.com/MashPlant/bitset" }
print = { path = "src/print" }

[dev-dependencies]
clap = "*"

[lib]
path = 'src/lib.rs'

[[example]]
name = 'show_fa'