[package]
name = "re2dfa"
version = "1.0.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
smallvec = { version = "*", features = ["union"] }
nom = "*"
bitset = { git = "https://github.com/MashPlant/bitset" }
pretty_u8 = { git = "https://github.com/MashPlant/pretty_u8" }

[dev-dependencies]
clap = "*"