[package]
name = "re2dfa"
version = "1.0.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
tools = { git = "https://github.com/MashPlant/tools" }
pretty_u8 = { git = "https://github.com/MashPlant/pretty_u8" }
smallvec = { version = "*", features = ["union"] }
nom = "*"

[dev-dependencies]
clap = "*"
